turning in homework assignment 2 responsive portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ h1 {
     font-family:'Georgia', Times, Times New Roman, serif; 
     font-size:2em;
     color:#4aaaa5;
-    padding-left:13px;
+    padding-left:25px;
     padding-top:20px;
     padding-bottom:20px;
 }
@@ -33,11 +33,7 @@ h3 {
 
 h4 {
     font-family:'Georgia', Times, Times New Roman, serif; 
-    color:#ffffff;
-    background-color:#4aaaa5;
-    text-align:center;
-    padding-top:10px;
-    padding-bottom:10px;
+
 }
 
 hr {
@@ -61,7 +57,7 @@ p {
     background-color: #ffffff;
     border-bottom: 1px solid #cccccc;
     height:58px;
-    margin: 0 auto;
+    
 }
 
 #content-container {
@@ -71,7 +67,7 @@ p {
 }
 .main-section {
     background-color:#ffffff;
-    border-color:#dddddd;
+    border: 1px solid #dddddd;
     width:960px;
     margin: 0 auto;
     padding-bottom:5px;
@@ -133,72 +129,186 @@ footer {
 .portplaceholder {
     width:275px;
     z-index:0;
-    left:6px;
-    top:15px;
     position:relative;
-}
-
-.hangportplaceholder {
-    position:absolute;
-    top:15px;
-    left:6px;
-    z-index:100;
-}
-
-#hangman {
-    top:180px;
-    z-index:1;
-    position:absolute;
-}
-
-.rgbportplaceholder {
-    position:absolute;
-    top:15px;
-    left:325px;
-}
-
-#rpg {
-    top:180px;
-    z-index:1;
-    position:absolute;
-}
-
-.triviaportplaceholder {
-    position:absolute;
-    top:280px;
-    left:6px;
-}
-
-#trivia {
-    top:180px;
-    z-index:1;
-    position:absolute;
-}
-
-.rutgersportplaceholder {
-    position:absolute;
-    top:280px;
-    left:325px;
-}
-
-#rutgers {
-    top:180px;
-    z-index:1;
-    position:absolute;
-}
-
-.rockportplaceholder {
-    position:absolute;
-    top:545px;
-    left:6px;
-}
-
-#rock {
-    top:180px;
-    z-index:1;
-    position:absolute;
+    float:left;
+    margin:20px 30px 25px 30px;
+    overlow: auto;
 }
 
 #portmain {
     padding-bottom:840px;
+}
+
+.site {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+  
+.site-content {
+    flex: 1;
+  }
+
+.portplaceholder h4 {
+    position:absolute;
+    bottom:20px;
+    width:100%;
+    font-weight:300;
+    line-height:30px;
+    color:#ffffff;
+    text-align:center;
+    background:#4aaaa5;
+    margin-bottom:0;
+    border-bottom:0;
+}
+
+
+body, html {
+    width: 100%;
+    height:100%;
+}
+
+@media screen and (max-width:980px) {
+    .main-section {
+        width:65%;
+        margin-left:2%;
+    }
+
+    #logo {
+        margin-left:0%;
+    }
+
+    .portplaceholder img {
+        width:90%;
+    }
+
+    .portplaceholder h4 {
+        width:90%;
+    }
+
+    #portmain h1 {
+        padding-left:25px;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .main-section {
+        width:96%;
+        margin: 0 auto;
+    }
+
+    .container {
+        width:100%;
+        max-width:740px;
+        padding-left:2%;
+        padding-right:2%;
+    }
+
+    #masterheader {
+        margin-left:0px;
+        margin-right:0px;
+    }
+
+    .footer {
+        width:100%;
+        max-width:768px;
+    }
+    
+    .portcontainer {
+        max-width:760px;
+    }
+
+    nav {
+        width:25%;
+    }
+
+    .portplaceholder {
+        margin: 20px 40px 25px 30px;
+    }
+
+    .portplaceholder img {
+        width:120%;
+    }
+
+    .portplaceholder h4 {
+        width:120%;
+    }
+}
+
+@media screen and (max-width:640px) {
+    .main-section {
+        width:100%;
+        max-width:96%;
+        margin-top:8%;
+        border: 1px solid #dddddd;
+    }
+
+    .container {
+        max-width: 96%
+    }
+
+    #logo {
+        width:100%;
+        text-align:center;
+        padding-left:0px;
+        padding-right:0px;
+        margin-left:0px;
+    }
+
+    nav {
+        width:100%;
+        max-width:640px;
+        text-align:center;
+        background-color:#ffffff;
+        border-bottom:2px solid #dddddd;
+    }
+
+    .me {
+        width: 80%;
+        margin-left:10%;
+        margin-bottom:2%;
+    }
+
+    #masterheader {
+        max-width:640px;
+        border-bottom-width: 0px;
+        margin-left:0;
+        margin-right:0;
+        background-color:#4aaaa5;
+    }
+
+    hr {
+        width:96%;
+    }
+
+    .site-content {
+        margin-top:9%;
+    }
+
+    .portcontainer {
+        width:96%;
+        max-width:640px;
+    }
+
+    .portplaceholder img {
+        width:200%;
+        
+    }
+
+    .portplaceholder h4 {
+        width:200%;
+    }
+
+    #portmain {
+        margin-top:8%;
+        align-content:center;
+    }
+
+    .sitecontent {
+        margin-top:58px;
+    }
+
+    #contact-form: {
+        margin-top:0;
+    }
 }
